--- a/index.css
+++ b/index.css
@@ -71,7 +71,7 @@ body {
   color: white;
   text-decoration: none;
   font-size: 2vw;
-  font-family: "quicksand", serif;
+  font-family: forum, serif;
   font-weight: 300;
   border-left: solid 1px #c69b34;
   padding-left: 0.3em;
@@ -376,7 +376,7 @@ a.nav-link {
 .logo {
   width: 100vw;
   height: 50%;
-  padding: 20% 7% 3% 7%;
+  padding: 0% 7% 3% 7%;
   opacity: 0;
   animation: fadeIn 4s ease-in-out forwards;
   align-self: center;
@@ -426,7 +426,9 @@ a.nav-link {
     width: auto;
     height: 60%;
     max-width: 80%;
-    padding: 10% 7% 1% 7%;
+    padding: 0% 7% 0 7%;
+    align-self: center;
+    margin: auto;
   }
 
   .sipka {
@@ -763,10 +765,11 @@ a.nav-link {
 .contact {
   grid-area: contact;
   background-color: #070c12;
-  position: sticky;
+ position: sticky;
   top: 0;
   z-index: 4;
 }
+
 
 .facebook,
 .instagram {
@@ -909,6 +912,8 @@ label {
   text-align: center;
   font-size: 14px;
   margin: 1rem 0 1rem 0;
+  position: relative;
+  z-index: 9999;
 }
 
 .footer p {
@@ -918,6 +923,7 @@ label {
   padding: 5%;
   text-align: center;
   font-size: 10px;
+  z-index:15;
 }
 
 .footer a {
@@ -925,6 +931,7 @@ label {
   text-decoration: underline;
   cursor: pointer;
   pointer-events: auto;
+  z-index:15;
 }
 
 .footer a:hover {
@@ -1029,6 +1036,7 @@ label {
     margin: 0 auto;
   }
 
+
   .footer {
     padding-top: 3rem;
     text-align: center;
@@ -1038,7 +1046,7 @@ label {
 
   .footer p {
     padding: 1rem;
-    font-size: 16px;
+    font-size: 17px;
     text-align: center;
     width: 100%;
   }
@@ -1093,3 +1101,13 @@ label {
     color: #eeeae4;
   }
 }
+
+
+.address {
+  pointer-events: none;
+}
+
+.address * {
+  pointer-events: auto;
+}
+
