--- a/index.css
+++ b/index.css
@@ -362,6 +362,7 @@ a.nav-link {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
+ 
   z-index: 5;
 }
 
@@ -518,7 +519,9 @@ a.nav-link {
   height: 50vh;
   object-fit: cover;
 }
-
+.eko .hero-image {
+    object-position: 4% 35%;
+  }
 .eko-wrapper,
 .styl-wrapper {
   position: sticky;
@@ -613,9 +616,9 @@ a.nav-link {
   .hero-image {
     height: 70vh;
   }
-  .eko {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url("img/ksilt1350.jpg");
+  
+  .eko .hero-image {
+    object-position: 64% 15%;
   }
   .eko,
   .styl {
@@ -1130,9 +1133,9 @@ label {
     width: 100%;
   }
 
-  .styl .hero-image {
+  /*.styl .hero-image {
     object-position: 54% 50%;
-  }
+  }*/
 
   .shops {
     max-width: 1350px;
